# dpdk

./: MAINTAINERS  meson_options.txt
app/: meson.build
app/test/: meson.build  test_cryptodev.c  test_cryptodev_blockcipher.c
app/test-bbdev/: test_bbdev_perf.c
app/test-crypto-perf/: cperf_ops.c  cperf_options.h  cperf_options_parsing.c  cperf_test_throughput.c
app/test-crypto-perf/configs/: README_dpdk-graph-results
app/test-pmd/: cmdline.c  cmdline_flow.c  config.c
config/: meson.build
config/arm/: meson.build
doc/guides/tools/: cryptoperf.rst
examples/: Makefile  meson.build
examples/l2fwd/: main.c
examples/l2fwd-crypto/: main.c
examples/l2fwd-crypto-event/: main.c
examples/l2fwd-event/: l2fwd_event_internal_port.c
examples/l2fwd-qdma/: main.c
examples/l3fwd/: l3fwd_lpm.c  main.c
examples/pkt_split_app/: main.c  meson.build
examples/ptpclient/: ptpclient.c
examples/qdma_demo/: main.c  qdma_demo.h
examples/qos-demo/: Makefile  README  input.data  input_2_L2_2_L1.data  input_4_L1_2_L2.data  main.c  meson.build  parse.c  qos.h
lib/librte_cryptodev/: rte_crypto_sym.h
lib/librte_eal/: version.map
lib/librte_ethdev/: rte_ethdev.c  rte_ethdev.h  rte_flow.h
lib/librte_mempool/: rte_mempool.c  version.map
lib/librte_security/: rte_security.h
nxp/: README  README_dpaa1_shared_mac  README_pkt_split_app_demo  README_qdma_demo  build_dpdk.sh  crypto_perf_test.sh  enable_performance_mode.sh
nxp/dpaa/: usdpaa_config_ls1046_shared_24g.xml  usdpaa_policy_24g_classif_frag_gtp_1queue.xml
nxp/dpaa2/: README_FLOW_CONTROL  dynamic_dpl.sh
(+94 files in other folders)
