# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2020 NXP

# meson file, for building this example as part of a main DPDK build.
#
# To build this example as a standalone application with an already-installed
# DPDK instance, use 'make'

# Enable experimental API flag as qos-demo uses rte_ethdev_set_ptype API
allow_experimental_apis = true
sources = files(
	'parse.c', 'main.c'
)
